session-12-ingress-configmaps-secrets/Viraj-24BCS10274/manifests/configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "echo ENV=$APP_ENV MESSAGE=$APP_MESSAGE; sleep 3600"]
