session-12-ingress-configmaps-secrets/Viraj-24BCS10274/manifests/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "echo password-length=$(wc -c < /etc/secret/password); sleep 3600"]
      volumeMounts:
        - name: secret-file
          mountPath: /etc/secret
          readOnly: true
  volumes:
    - name: secret-file
      secret:
        secretName: app-secret
        items:
          - key: DB_PASSWORD
            path: password
